Tue Nov 10 00:36:46 2015  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb (Resolv::DNS::Message::MessageEncoder#put_labels):
	  Prevent overflow of pointer to labels.
	  Patch by Hannes Georg.  [ruby-core:71248] [Bug #11632]

Tue Nov 10 00:25:41 2015  Kazuki Tsujimoto  <kazuki@callcc.net>

	* gems/bundled_gems: update to power_assert 0.2.6.

Mon Nov  9 21:48:17 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_check_funcall_default): split from
	  rb_check_funcall to return the given fallback value.

	* object.c (rb_obj_dig): use rb_check_funcall_default so that tail
	  call optimization will be possible.  [Feature #11643]

Mon Nov  9 21:27:23 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_dig): new method Array#dig.

	* hash.c (rb_hash_dig): new method Hash#dig.

	* object.c (rb_obj_dig): dig in nested arrays/hashes.
	  [Feature #11643]

Mon Nov  9 18:00:47 2015  Yuki Nishijima  <mail@yukinishijima.net>

	* gems/bundled_gems: Upgrade the did_you_mean gem to 1.0.0.beta3

Mon Nov  9 17:38:14 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* test/runner.rb: use official repository for coverage tool.
	* Makefile.in: ditto.
	* common.mk: ditto.
	* .gitignore: ignored third party repositories.

Mon Nov  9 17:29:09 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* compile.c (iseq_compile_each): Dynamic string literals should be
	  frozen.
	  [ruby-core:57574] [Feature #8976]

Mon Nov  9 15:56:07 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* common.mk: Use ruby organization url for simplecov repository.

Sun Nov  8 16:24:09 2015  Masaki Matsushita <glass.saga@gmail.com>

	* NEWS: describe addition of File::TMPFILE

Sun Nov  8 15:19:17 2015  Masaki Matsushita <glass.saga@gmail.com>

	* file.c: Add O_TMPFILE.

Sun Nov  8 14:24:43 2015  windwiny  <windwiny.ubt@gmail.com>

	* method.h (METHOD_ENTRY_{VISI,BASIC,FLAGS}_SET): suppress
	  shift-op-parentheses warnings.  [Fix GH-1082]

Sun Nov  8 14:01:22 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
